mini-jaja-parser/edu.ubfc.st.vm.project.grp7.mini.jaja/edu/ubfc/st/vm/project/grp7/parser/antlr/MiniJajaParser.java
// Generated from C:/Users/Vincent/Documents/git/m1comp7/mini-jaja-parser/src/resources\MiniJaja.g4 by ANTLR 4.8
package edu.ubfc.st.vm.project.grp7.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiniJajaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, FINAL=2, MAIN=3, RETURN=4, WRITE=5, WRITELN=6, IF=7, ELSE=8, 
		WHILE=9, LBRACK=10, RBRACK=11, LPAR=12, RPAR=13, LBRACE=14, RBRACE=15, 
		COMMA=16, SEMI=17, ASSIGN=18, GT=19, LT=20, BANG=21, EQUAL=22, AND=23, 
		OR=24, INC=25, DEC=26, ADD=27, SUB=28, MUL=29, DIV=30, ADD_ASSIGN=31, 
		VOID=32, INT=33, BOOLEAN=34, STRING=35, BoolLitteral=36, StringLitteral=37, 
		Identifier=38, NumberLitteral=39, WS=40, COMMENT=41, LINE_COMMENT=42;
	public static final int
		RULE_classe = 0, RULE_ident = 1, RULE_decls = 2, RULE_decl = 3, RULE_vars = 4, 
		RULE_var = 5, RULE_vexp = 6, RULE_methode = 7, RULE_methmain = 8, RULE_entetes = 9, 
		RULE_entete = 10, RULE_instrs = 11, RULE_instr = 12, RULE_listexp = 13, 
		RULE_exp = 14, RULE_exp1 = 15, RULE_exp2 = 16, RULE_terme = 17, RULE_fact = 18, 
		RULE_ident1 = 19, RULE_typemeth = 20, RULE_type = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"classe", "ident", "decls", "decl", "vars", "var", "vexp", "methode", 
			"methmain", "entetes", "entete", "instrs", "instr", "listexp", "exp", 
			"exp1", "exp2", "terme", "fact", "ident1", "typemeth", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'final'", "'main'", "'return'", "'write'", "'writeln'", 
			"'if'", "'else'", "'while'", "'['", "']'", "'('", "')'", "'{'", "'}'", 
			"','", "';'", "'='", "'>'", "'<'", "'!'", "'=='", "'&&'", "'||'", "'++'", 
			"'--'", "'+'", "'-'", "'*'", "'/'", "'+='", "'void'", "'int'", "'boolean'", 
			"'string'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "FINAL", "MAIN", "RETURN", "WRITE", "WRITELN", "IF", "ELSE", 
			"WHILE", "LBRACK", "RBRACK", "LPAR", "RPAR", "LBRACE", "RBRACE", "COMMA", 
			"SEMI", "ASSIGN", "GT", "LT", "BANG", "EQUAL", "AND", "OR", "INC", "DEC", 
			"ADD", "SUB", "MUL", "DIV", "ADD_ASSIGN", "VOID", "INT", "BOOLEAN", "STRING", 
			"BoolLitteral", "StringLitteral", "Identifier", "NumberLitteral", "WS", 
			"COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniJaja.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniJajaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ClasseContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(MiniJajaParser.CLASS, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(MiniJajaParser.LBRACE, 0); }
		public DeclsContext decls() {
			return getRuleContext(DeclsContext.class,0);
		}
		public MethmainContext methmain() {
			return getRuleContext(MethmainContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(MiniJajaParser.RBRACE, 0); }
		public ClasseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classe; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).enterClasse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).exitClasse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJajaVisitor ) return ((MiniJajaVisitor<? extends T>)visitor).visitClasse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClasseContext classe() throws RecognitionException {
		ClasseContext _localctx = new ClasseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_classe);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(CLASS);
			setState(45);
			ident();
			setState(46);
			match(LBRACE);
			setState(47);
			decls();
			setState(48);
			methmain();
			setState(49);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(MiniJajaParser.Identifier, 0); }
		public IdentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ident; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).enterIdent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).exitIdent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJajaVisitor ) return ((MiniJajaVisitor<? extends T>)visitor).visitIdent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentContext ident() throws RecognitionException {
		IdentContext _localctx = new IdentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ident);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclsContext extends ParserRuleContext {
		public DeclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decls; }
	 
		public DeclsContext() { }
		public void copyFrom(DeclsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EmptyDeclsContext extends DeclsContext {
		public EmptyDeclsContext(DeclsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).enterEmptyDecls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).exitEmptyDecls(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJajaVisitor ) return ((MiniJajaVisitor<? extends T>)visitor).visitEmptyDecls(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MultiDeclsContext extends DeclsContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MiniJajaParser.SEMI, 0); }
		public DeclsContext decls() {
			return getRuleContext(DeclsContext.class,0);
		}
		public MultiDeclsContext(DeclsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).enterMultiDecls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).exitMultiDecls(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJajaVisitor ) return ((MiniJajaVisitor<? extends T>)visitor).visitMultiDecls(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclsContext decls() throws RecognitionException {
		DeclsContext _localctx = new DeclsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decls);
		try {
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FINAL:
			case VOID:
			case INT:
			case BOOLEAN:
				_localctx = new MultiDeclsContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				decl();
				setState(54);
				match(SEMI);
				setState(55);
				decls();
				}
				break;
			case MAIN:
				_localctx = new EmptyDeclsContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public MethodeContext methode() {
			return getRuleContext(MethodeContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).exitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJajaVisitor ) return ((MiniJajaVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decl);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				var();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				methode();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarsContext extends ParserRuleContext {
		public VarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars; }
	 
		public VarsContext() { }
		public void copyFrom(VarsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EmptyVarsContext extends VarsContext {
		public EmptyVarsContext(VarsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).enterEmptyVars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).exitEmptyVars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJajaVisitor ) return ((MiniJajaVisitor<? extends T>)visitor).visitEmptyVars(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MultiVarsContext extends VarsContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MiniJajaParser.SEMI, 0); }
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public MultiVarsContext(VarsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).enterMultiVars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).exitMultiVars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJajaVisitor ) return ((MiniJajaVisitor<? extends T>)visitor).visitMultiVars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarsContext vars() throws RecognitionException {
		VarsContext _localctx = new VarsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_vars);
		try {
			setState(69);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FINAL:
			case VOID:
			case INT:
			case BOOLEAN:
				_localctx = new MultiVarsContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				var();
				setState(65);
				match(SEMI);
				setState(66);
				vars();
				}
				break;
			case RETURN:
			case WRITE:
			case WRITELN:
			case IF:
			case WHILE:
			case RBRACE:
			case Identifier:
				_localctx = new EmptyVarsContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
	 
		public VarContext() { }
		public void copyFrom(VarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VarNodeContext extends VarContext {
		public TypemethContext typemeth() {
			return getRuleContext(TypemethContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public VexpContext vexp() {
			return getRuleContext(VexpContext.class,0);
		}
		public VarNodeContext(VarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).enterVarNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).exitVarNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJajaVisitor ) return ((MiniJajaVisitor<? extends T>)visitor).visitVarNode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArrayContext extends VarContext {
		public TypemethContext typemeth() {
			return getRuleContext(TypemethContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode LBRACK() { return getToken(MiniJajaParser.LBRACK, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(MiniJajaParser.RBRACK, 0); }
		public ArrayContext(VarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).exitArray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJajaVisitor ) return ((MiniJajaVisitor<? extends T>)visitor).visitArray(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CstContext extends VarContext {
		public TerminalNode FINAL() { return getToken(MiniJajaParser.FINAL, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public VexpContext vexp() {
			return getRuleContext(VexpContext.class,0);
		}
		public CstContext(VarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).enterCst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).exitCst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJajaVisitor ) return ((MiniJajaVisitor<? extends T>)visitor).visitCst(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_var);
		try {
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new VarNodeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				typemeth();
				setState(72);
				ident();
				setState(73);
				vexp();
				}
				break;
			case 2:
				_localctx = new ArrayContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				typemeth();
				setState(76);
				ident();
				setState(77);
				match(LBRACK);
				setState(78);
				exp(0);
				setState(79);
				match(RBRACK);
				}
				break;
			case 3:
				_localctx = new CstContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				match(FINAL);
				setState(82);
				type();
				setState(83);
				ident();
				setState(84);
				vexp();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VexpContext extends ParserRuleContext {
		public VexpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vexp; }
	 
		public VexpContext() { }
		public void copyFrom(VexpContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OmegaAssignContext extends VexpContext {
		public OmegaAssignContext(VexpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).enterOmegaAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).exitOmegaAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJajaVisitor ) return ((MiniJajaVisitor<? extends T>)visitor).visitOmegaAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VexpAssignContext extends VexpContext {
		public TerminalNode ASSIGN() { return getToken(MiniJajaParser.ASSIGN, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public VexpAssignContext(VexpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).enterVexpAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).exitVexpAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJajaVisitor ) return ((MiniJajaVisitor<? extends T>)visitor).visitVexpAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VexpContext vexp() throws RecognitionException {
		VexpContext _localctx = new VexpContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_vexp);
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASSIGN:
				_localctx = new VexpAssignContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				match(ASSIGN);
				setState(89);
				exp(0);
				}
				break;
			case SEMI:
				_localctx = new OmegaAssignContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodeContext extends ParserRuleContext {
		public TypemethContext typemeth() {
			return getRuleContext(TypemethContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode LPAR() { return getToken(MiniJajaParser.LPAR, 0); }
		public EntetesContext entetes() {
			return getRuleContext(EntetesContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(MiniJajaParser.RPAR, 0); }
		public TerminalNode LBRACE() { return getToken(MiniJajaParser.LBRACE, 0); }
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public InstrsContext instrs() {
			return getRuleContext(InstrsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(MiniJajaParser.RBRACE, 0); }
		public MethodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).enterMethode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).exitMethode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJajaVisitor ) return ((MiniJajaVisitor<? extends T>)visitor).visitMethode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodeContext methode() throws RecognitionException {
		MethodeContext _localctx = new MethodeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_methode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			typemeth();
			setState(94);
			ident();
			setState(95);
			match(LPAR);
			setState(96);
			entetes();
			setState(97);
			match(RPAR);
			setState(98);
			match(LBRACE);
			setState(99);
			vars();
			setState(100);
			instrs();
			setState(101);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethmainContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(MiniJajaParser.MAIN, 0); }
		public TerminalNode LBRACE() { return getToken(MiniJajaParser.LBRACE, 0); }
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public InstrsContext instrs() {
			return getRuleContext(InstrsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(MiniJajaParser.RBRACE, 0); }
		public MethmainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methmain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).enterMethmain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJajaListener ) ((MiniJajaListener)listener).exitMethmain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJajaVisitor ) return ((MiniJajaVisitor<? extends T>)visitor).visitMethmain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethmainContext methmain() throws RecognitionException {
		MethmainContext _localctx = new MethmainContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_methmain);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(MAIN);
			setState(104);
			match(LBRACE);
			setState(105);
			vars();
			setState(106);
			instrs();
			setState(107);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
